🐛 FIX: scroll overflow

--- a/src/scss/blocks/_burger-menu.scss
+++ b/src/scss/blocks/_burger-menu.scss
@@ -30,6 +30,7 @@
   padding-inline: var(--space-s, 1.5rem);
   box-shadow: 0 0 0 100vw hsl(0, 0%, 8%, 0);
   overflow-y: auto;
+  overflow-y: hidden;
   background-color: var(--clr-neutral-100);
   transform: translateX(60vw);
   transition: all 250ms ease-in;
